SERVER-47892 DiagnosticInfo should use Client to acquire timestamps